# sv-agentic-ai

ai_news/: README.md  pyproject.toml  report.md
ai_news/src/ai_news/: crew.py  main.py
ai_news/src/ai_news/config/: agents.yaml  tasks.yaml  topics.json
crew-ai/: GenTool.py  L2_Newsletter_Publisher_v2.ipynb  README.md  pyproject.toml
crew-ai/files/: outline_task.md  save_task.md  tavily_response.json  write_task.md
crew-ai/output/: newsletter.json
health_news_portal/: README.md  pyproject.toml
health_news_portal/src/health_news_portal/: crew.py  main.py
health_news_portal/src/health_news_portal/config/: agents.yaml  tasks.yaml
