[project]
name = "prompts"
version = "0.1.0"
description = "prompts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.193.2",
    "crewai-tools>=0.0.1",
    "langchain-community>=0.3.29",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "svlearn-bootcamp>=0.1.7",
    "tavily-python>=0.7.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    # ... other includes like README, pyproject.toml, etc.
]

[tool.hatch.build.targets.wheel]
packages = ["src/prompts"]
