[project]
name = "health_news_portal"
version = "0.1.0"
description = "health-news-portal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
    "tavily-python>=0.7.12",
]

[project.scripts]
health_news_portal = "health_news_portal.main:run"
run_crew = "health_news_portal.main:run"
train = "health_news_portal.main:train"
replay = "health_news_portal.main:replay"
test = "health_news_portal.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
